# kwai-interactive-live-rust

./: Cargo.toml  readme.md  rustfmt.toml
.cargo/: config.toml
crates/bevy_kwai_interactive_live/: Cargo.toml  readme.md
crates/bevy_kwai_interactive_live/examples/: main.rs
crates/kwai_interactive_live_bevy_plugin/: Cargo.toml  readme.md
crates/kwai_interactive_live_bevy_plugin/examples/: main.rs
crates/kwai_interactive_live_bevy_plugin/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
examples/: main.rs
src/: event.rs  kwai.rs  lib.rs  stream.rs
src/kwai/: mod.rs
tests/: test.rs
