[package]
name = "kwai_interactive_live"
version = "0.2.1"
edition = "2021"
description = "快手互动直播sdk"
readme = 'readme.md'
license = 'MIT OR Apache-2.0'
keywords = ['async']

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
futures = "0.3"
log = "0.4"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
