[package]
description = "快手互动直播sdk"
edition = "2021"
keywords = ['async', 'game']
license = 'MIT OR Apache-2.0'
name = "kwai_interactive_live"
readme = 'readme.md'
version = "0.3.2"
repository = "https://github.com/liangyongrui/kwai-interactive-live-rust"

[workspace]
members = ["crates/*"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures-lite = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
