[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kwai_interactive_live = { path = "../" }
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-stream = "0.3"
futures-lite = "1"
log = "0.4"
clap = { version = "4", features = ["derive"] }
