[package]
name = "bevy_kwai_interactive_live"
version = "0.1.1"
description = "快手互动直播bevy sdk"
edition = "2021"
keywords = ['async', 'game']
license = 'MIT OR Apache-2.0'
readme = 'readme.md'
repository = "https://github.com/liangyongrui/kwai-interactive-live-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
async-compat = "0.2"
bevy_app = "0.8"
bevy_ecs = "0.8"
bevy_tasks = "0.8"
crossbeam-channel = "0.5"
futures-lite = "1"
kwai_interactive_live = "0.3"
log = "0.4"

[dev-dependencies]
bevy = "0.8"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui", features = [
    "bevy_renderer"
] }
